[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-otp-sns"
version = "0.1.0"
authors = [
  { name="CriticalSTART", email="infrastructure@criticalstart.com" },
]
description = "A Django-otp plugin that sends and verifies tokens using AWS SNS"
dynamic = ["dependencies"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Framework :: Django"
]

[project.urls]
"Homepage" = "https://github.com/AdvancedThreatAnalytics/django-otp-sns"

[tool.setuputils.dynamic]
dependencies = { file = ["requirements.txt"] }
